--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = org.jetbrains.plugins.template
-pluginName = IntelliJ Platform Plugin Template
-pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
+pluginGroup = com.asanga.incontext
+pluginName = Incontext Plugin
+pluginRepositoryUrl =
 # SemVer format -> https://semver.org
 pluginVersion = 2.1.0
 
